feat: prepare JVMTI 3.0 API and ABI fidelity